<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/top_margin"
        app:cardCornerRadius="@dimen/rounds">

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/desc"
            android:textAlignment="center"
            android:textSize="@dimen/md_text" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mini_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_main"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/select_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin">

            </Spinner>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:text="@string/current_pollution"
                android:textAlignment="center"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:text="@string/dummy_text"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:text="@string/upcoming_prediction"
                android:textStyle="bold"
                android:textSize="@dimen/large_text"
                android:textAlignment="center" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Monday" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Tuesday" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Wednesday" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Thursday" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Friday" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Saturday" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                </LinearLayout>


            </HorizontalScrollView>

            <Button
                android:id="@+id/btnContribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Go to your contributions"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>